--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 
 [dependencies]
-anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git", rev = "dae4c216b883ea089432ff5c00d100f4f662fd07" }
-anchor-lang = ">=0.26.0"
+# Use the main branch to ensure compatibility with the latest Anchor version.
+anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git" }
+anchor-lang = "0.31.1"
 solana-program = ">=1.13"
 jupiter-amm-interface = ">=0.2.1"
 rand = "0.8.5"
